2006-04-06  Jon A. Cruz  <jon@joncruz.org>

	* src/interface.cpp, src/dialogs/clonetiler.cpp,
	  src/dialogs/object-properties.cpp, src/dialogs/stroke-style.cpp,
	  src/dialogs/text-edit.cpp, src/dialogs/tiledialog.cpp,
	  src/dialogs/xml-tree.cpp, src/ui/dialog/align-and-distribute.cpp,
	  src/ui/widget/labelled.cpp, src/widgets/button.cpp,
	  src/widgets/button.h, src/widgets/desktop-widget.cpp,
	  src/widgets/gradient-toolbar.cpp, src/widgets/icon.cpp,
	  src/widgets/icon.h, src/widgets/layer-selector.cpp,
	  src/widgets/paint-selector.cpp, src/widgets/select-toolbar.cpp,
	  src/widgets/toolbox.cpp, src/widgets/toolbox.h, src/icon-size.h:

	  Decoupling from direct use of GtkIconSize to allow for smaller
	  custom ones.

2006-04-06  Jon A. Cruz  <jon@joncruz.org>

	* src/Makefile_insert, src/Makefile.am, src/color-profile.cpp
	  src/color-profile.h, src/color-profile-fns.h,
	  src/color-profile-test.h, src/sp-image.cpp:

	  Adding rendering-intent to <color-profile>.

2006-04-05  MenTaLguY  <mental@rydia.net>

	* configure.ac, share/keyboards/.cvsignore, share/keyboards/Makefile.am,
	  share/keyboards/README, share/keys/.cvsignore, share/keys/Makefile.am,
	  share/keys/Makefile.in, share/Makefile.am:

	  share/keyboards -> share/keys

	* share/keys/Makefile.am, share/keys/default.xml, src/Makefile_insert,
	  src/shortcuts.cpp, src/shortcuts-default-xml.cpp:

	  first shot at configurable keymaps

2006-04-05  MenTaLguY  <mental@rydia.net>

	* src/io/Makefile_insert, src/io/resource.cpp, src/io/resource.h:

	  introduce uniform resource path API to replace copy-and-pasted hacks

2006-04-05  Jon A. Cruz  <jon@joncruz.org>

	* src/svg/svg-color-test.h, src/svg/svg-color.cpp:

	  Tuned icc-color() parsing.

2006-04-02  Jon A. Cruz  <jon@joncruz.org>

	* src/color-profile.h, src/color-profile.cpp,
	  src/color-profile-fns.h, src/sp-image.h, src/sp-image.cpp:

	  Initial support of color-profile on <image> elements.

2006-04-02  Jon A. Cruz  <jon@joncruz.org>
